Bug 196995 - REGRESSION(r244162) Clearing website data from ephemeral WKWebsiteDataStore should finish instead of asserting or hanging
Summary: REGRESSION(r244162) Clearing website data from ephemeral WKWebsiteDataStore s...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Alex Christensen
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2019-04-16 16:20 PDT by Alex Christensen
Modified: 2019-04-16 17:19 PDT (History)
6 users (show)

See Also:


Attachments
Patch (3.96 KB, patch)
2019-04-16 16:23 PDT, Alex Christensen
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Christensen 2019-04-16 16:20:48 PDT
REGRESSION(r244162) Clearing website data from ephemeral WKWebsiteDataStore should finish instead of asserting or hanging
Comment 1 Alex Christensen 2019-04-16 16:23:19 PDT
Created attachment 367592 [details]
Patch
Comment 2 WebKit Commit Bot 2019-04-16 17:17:31 PDT
The commit-queue encountered the following flaky tests while processing attachment 367592 [details]:

fetch/fetch-worker-crash.html bug 187257 (author: youennf@gmail.com)
The commit-queue is continuing to process your patch.
Comment 3 WebKit Commit Bot 2019-04-16 17:18:16 PDT
Comment on attachment 367592 [details]
Patch

Clearing flags on attachment: 367592

Committed r244364: <https://trac.webkit.org/changeset/244364>
Comment 4 WebKit Commit Bot 2019-04-16 17:18:18 PDT
All reviewed patches have been landed.  Closing bug.
Comment 5 Radar WebKit Bug Importer 2019-04-16 17:19:18 PDT
<rdar://problem/49960581>