REGRESSION(r244162) Clearing website data from ephemeral WKWebsiteDataStore should finish instead of asserting or hanging https://bugs.webkit.org/show_bug.cgi?id=196995

Patch by Alex Christensen <achristensen@webkit.org> on 2019-04-16
Reviewed by Brady Eidson.

Source/WebKit:

Always call CompletionHandlers.  Otherwise things hang or assert.
I added an API test that asserts without this change so we don't regress this again.

* NetworkProcess/cache/CacheStorageEngine.cpp:
(WebKit::CacheStorage::Engine::clearAllCaches):
(WebKit::CacheStorage::Engine::clearCachesForOrigin):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/WKWebsiteDatastore.mm:
(TEST):

Canonical link: https://commits.webkit.org/211251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244364 268f45cc-cd09-0410-ab3c-d52691b4dbfc